--- a/spotlight.html
+++ b/spotlight.html
@@ -103,7 +103,7 @@
     </nav>
 
    <!-- Change this section -->
-<section id="newsletter-section" class="fullscreen-section hero" style="background-image: url('images/01.jpg')">
+<section id="newsletter-section" class="fullscreen-section hero" style="background-image: url('images/spotlight-body.jpg')">
     <div class="section-content left-align">
         <h2 class="normal-font">Spotlight</h2>
         <span class="section-subtitle">Highlighting cycling culture of India</span>
