--- a/spotlight.html
+++ b/spotlight.html
@@ -16,7 +16,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preconnect" href="https://cdnjs.cloudflare.com">
-    <link rel="preload" href="css/home.css" as="style">
+    <link rel="preload" href="css/spotlight.css" as="style">
     <link rel="preload" href="https://fonts.googleapis.com/css2?family=Glacial+Indifference:wght@400;700&display=swap" as="style">
     <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" as="style">
 
