--- a/contact.html
+++ b/contact.html
@@ -81,7 +81,7 @@
             </div>
             <div class="nav-links">
                 <a href="./">Home</a>
-                <a href="#spotlight">Spotlight</a>
+                <a href="spotlight.html">Spotlight</a>
                 <a href="#experiences">Experiences</a>
                 <a href="#events">Events</a>
                 <a href="#clubs">Clubs</a>
