--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
             <div class="nav-links">
                 <a href="./" class="active">Home</a>
                 <a href="spotlight.html">Spotlight</a>
-                <a href="experiences.html">Experiences</a>
-                <a href="events.html">Events</a>
-                <a href="clubs.html">Clubs</a>
+                <a href="#">Experiences</a>
+                <a href="#">Events</a>
+                <a href="#">Clubs</a>
                 <a href="contact.html">Contact</a>
             </div>
             <button class="mobile-menu-btn" aria-label="Toggle menu">☰</button>
