--- a/spotlight.html
+++ b/spotlight.html
@@ -93,9 +93,9 @@
             <div class="nav-links">
                 <a href="index.html">Home</a>
                 <a href="spotlight.html" class="active">Spotlight</a>
-                <a href="#experiences.html">Experiences</a>
-                <a href="#events.html">Events</a>
-                <a href="#clubs.html">Clubs</a>
+                <a href="#">Experiences</a>
+                <a href="#">Events</a>
+                <a href="#">Clubs</a>
                 <a href="contact.html">Contact</a>
             </div>
             <button class="mobile-menu-btn">☰</button>
