--- a/contact.html
+++ b/contact.html
@@ -82,9 +82,9 @@
             <div class="nav-links">
                 <a href="./">Home</a>
                 <a href="spotlight.html">Spotlight</a>
-                <a href="#experiences">Experiences</a>
-                <a href="#events">Events</a>
-                <a href="#clubs">Clubs</a>
+                <a href="#">Experiences</a>
+                <a href="#">Events</a>
+                <a href="#">Clubs</a>
                 <a href="contact.html" class="active">Contact</a>
             </div>
             <button class="mobile-menu-btn">☰</button>
