--- a/spotlight/a-complete-guide-to-cycling-in-India.html
+++ b/spotlight/a-complete-guide-to-cycling-in-India.html
@@ -16,14 +16,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preconnect" href="https://cdnjs.cloudflare.com">
-    <link rel="preload" href="../blog.css" as="style">
+    <link rel="preload" href="../css/blog.css" as="style">
     <link rel="preload" href="https://fonts.googleapis.com/css2?family=Glacial+Indifference:wght@400;700&display=swap" as="style">
     <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" as="style">
 
     <!-- Styles & Fonts -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Glacial+Indifference:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../blog.css">
+    <link rel="stylesheet" href="../css/blog.css">
     <meta name="theme-color" content="#00a859">
 
     <!-- Social Meta -->
