--- a/spotlight/why-cycle-with-PM-could-be-more-impactful-than-mann-ki-baat.html
+++ b/spotlight/why-cycle-with-PM-could-be-more-impactful-than-mann-ki-baat.html
@@ -111,7 +111,7 @@
     </nav>
 
     <!-- Blog Header Section -->
-    <section id="blog-header" class="fullscreen-section" style="background-image: url('../images/maan-ki-baat.jpg')">
+    <section id="blog-header" class="fullscreen-section" style="background-image: url('../images/spotlight/maan-ki-baat.jpg')">
         <div class="section-content bottom-center">
             <div class="blog-meta">
                 <span class="blog-date">March 09, 2025</span>
@@ -122,7 +122,7 @@
     </section>
 
     <!-- Blog Content Section -->
-    <section id="blog-content" class="fullscreen-section" style="background-image: url('../images/maan-ki-baat.jpg')">
+    <section id="blog-content" class="fullscreen-section" style="background-image: url('../images/spotlight/maan-ki-baat.jpg')">
         <div class="section-content">
             <div class="blog-excerpt">
                 <p>How a national cycling initiative led by the Prime Minister could create more tangible impact than radio addresses by promoting health, sustainability and public engagement through action.</p>
