--- a/spotlight/is-10km-cycling-every-day-the-golden-distance.html
+++ b/spotlight/is-10km-cycling-every-day-the-golden-distance.html
@@ -111,7 +111,7 @@
     </nav>
 
     <!-- Blog Header Section -->
-    <section id="blog-header" class="fullscreen-section" style="background-image: url('../images/10km-cycling.jpg')">
+    <section id="blog-header" class="fullscreen-section" style="background-image: url('../images/spotlight/10km-cycling.jpg')">
         <div class="section-content bottom-center">
             <div class="blog-meta">
                 <span class="blog-date">September 08, 2024</span>
@@ -122,7 +122,7 @@
     </section>
 
     <!-- Blog Content Section -->
-    <section id="blog-content" class="fullscreen-section" style="background-image: url('../images/10km-cycling.jpg')">
+    <section id="blog-content" class="fullscreen-section" style="background-image: url('../images/spotlight/10km-cycling.jpg')">
         <div class="section-content">
             <div class="blog-excerpt">
                 <p>Emerging research suggests 10km daily cycling hits the sweet spot for sustainable health benefits, mental clarity, and environmental impact.</p>
