--- a/spotlight/screen-time-cycling-solution.html
+++ b/spotlight/screen-time-cycling-solution.html
@@ -122,7 +122,7 @@
     </section>
 
     <!-- Blog Content Section -->
-    <section id="blog-content" class="fullscreen-section">
+     <section id="blog-content" class="fullscreen-section" style="background-image: url('../images/spotlight/screen-time-cycling-solution.jpg')">
         <div class="section-content">
             <div class="blog-excerpt">
                 <p>With the average Indian spending 7.3 hours daily in front of screens, we explore how cycling can help balance digital consumption and improve overall well-being.</p>
