--- a/spotlight.html
+++ b/spotlight.html
@@ -144,6 +144,21 @@
                 <p>Learn how to build a daily 10km cycling habit without expensive gear. Practical tips for beginners to make cycling sustainable and enjoyable.</p>
                 <a href="spotlight/how-to-make-10km-cycling-your-daily-habit-without-spending-a-fortune.html" class="read-more">continue reading →</a>
             </div>
+
+             <div class="spotlight-item">
+                <p>With the average Indian spending 7.3 hours daily in front of screens, we explore how cycling can help balance digital consumption and improve overall well-being.</p>
+                <a href="spotlight/screen-time-cycling-solution.html" class="read-more">continue reading →</a>
+            </div>
+
+             <div class="spotlight-item">
+                <p>India's rapid urbanization demands sustainable transport solutions. A National Cycling Policy could reshape our cities, reduce congestion, and foster healthier communities.</p>
+                <a href="spotlight/national-cycling-policy-india.html" class="read-more">continue reading →</a>
+            </div>
+
+            <div class="spotlight-item">
+                <p>India's urban roads are becoming increasingly unsafe for cyclists. Dedicated cycling lanes could transform urban mobility, making cities safer and more sustainable.</p>
+                <a href="spotlight/dedicated-cycling-lanes-india.html" class="read-more">continue reading →</a>
+            </div>
             
             <div class="newsletter-cta">
                 <div class="newsletter-form-container">
