--- a/spotlight/best-seasons-cycling-india.html
+++ b/spotlight/best-seasons-cycling-india.html
@@ -101,7 +101,8 @@
         </div>
     </nav>
 
-    <section id="blog-header" class="fullscreen-section" style="background-image: url('../images/spotlight/cycling-india-seasons.jpg')"> <div class="section-content bottom-center">
+    <section id="blog-header" class="fullscreen-section" style="background-image: url('../images/spotlight/cycling-india-seasons.jpg')"> 
+        <div class="section-content bottom-center">
             <div class="blog-meta">
                 <span class="blog-date">May 24, 2025</span>
                 <span class="blog-category">Adventure Cycling</span>
@@ -110,7 +111,7 @@
         </div>
     </section>
 
-    <section id="blog-content" class="fullscreen-section" style="background-image: url('../images/spotlight/cycling-india-seasons..jpg')">
+    <section id="blog-content" class="fullscreen-section" style="background-image: url('../images/spotlight/cycling-india-seasons.jpg')">
         <div class="section-content">
             <div class="blog-excerpt">
                 <p>India’s vast geographical diversity makes it an incredible cycling destination, with each region offering a unique experience. The best time for cycling varies significantly based on weather, terrain, and seasonal changes across states. Here’s a detailed breakdown of the optimal seasons for cycling across different regions of India.</p>
