--- a/spotlight/India's-best-hill-stations-for-cycling-adventures.html
+++ b/spotlight/India's-best-hill-stations-for-cycling-adventures.html
@@ -4,13 +4,17 @@
     <!-- Basic Meta Tags -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>India's Best Hill Stations for Cycling Adventures | Cycle Culture</title>
     <meta name="description" content="Discover India's top cycling-friendly hill stations with cool weather, scenic routes, and rental information for unforgettable cycling adventures">
     <meta name="robots" content="index, follow">
     <link rel="canonical" href="https://cycleculture.in/spotlight/indias-best-hill-stations-for-cycling-adventures.html" />
     <link rel="icon" href="../images/favicon.ico" type="icon">
     <link rel="shortcut icon" href="../images/favicon.ico" type="image/x-icon">
+    <meta name="copyright" content="© 2025 Cycle Culture">
+    <meta property="og:title" content="India's Best Hill Stations for Cycling Adventures | Cycle Culture">
+    <meta property="og:description" content="Discover India's top cycling-friendly hill stations with cool weather and scenic routes">
+    <meta name="twitter:card" content="summary_large_image">
+
 
     <!-- Preload & Preconnect -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -26,21 +30,7 @@
     <link rel="stylesheet" href="../css/blog.css">
     <meta name="theme-color" content="#00a859">
 
-    <!-- Social Meta -->
-    <meta property="og:title" content="India's Best Hill Stations for Cycling Adventures | Cycle Culture">
-    <meta property="og:description" content="Discover India's top cycling-friendly hill stations with cool weather and scenic routes">
-    <meta property="og:type" content="article">
-    <meta property="og:url" content="https://cycleculture.in/spotlight/indias-best-hill-stations-for-cycling-adventures.html">
-    <meta property="og:image" content="https://cycleculture.in/images/hill-stations-for-cycling-social.jpg">
-    <meta property="og:site_name" content="Cycle Culture">
-    <meta property="article:published_time" content="2025-04-03">
-    <meta property="article:author" content="Cycle Culture">
-    <meta property="article:section" content="Adventure Cycling">
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="India's Best Hill Stations for Cycling Adventures">
-    <meta name="twitter:description" content="Discover India's top cycling-friendly hill stations with cool weather and scenic routes">
-    <meta name="twitter:image" content="https://cycleculture.in/images/hill-stations-for-cycling-social.jpg">
-    <meta name="twitter:site" content="@itscycleculture">
+    
 
     <!-- Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-56YGC2V2YG"></script>
@@ -81,7 +71,7 @@
       },
       "image": {
         "@type": "ImageObject",
-        "url": "https://cycleculture.in/images/hill-stations-for-cycling-social.jpg",
+        "url": "https://cycleculture.in/images/spotlight/hill-stations-for-cycling.jpg",
         "width": "1200",
         "height": "630"
       },
