--- a/spotlight/a-complete-guide-to-cycling-in-India.html
+++ b/spotlight/a-complete-guide-to-cycling-in-India.html
@@ -4,13 +4,16 @@
     <!-- Basic Meta Tags -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>A Complete Guide to Cycling in India | Cycle Culture Spotlight</title>
     <meta name="description" content="Comprehensive guide to cycling in India covering routes, seasons, bike types, and essential tips for cyclists of all levels">
     <meta name="robots" content="index, follow">
     <link rel="canonical" href="https://cycleculture.in/spotlight/a-complete-guide-to-cycling-in-India.html" />
     <link rel="icon" href="../images/favicon.ico" type="icon">
     <link rel="shortcut icon" href="../images/favicon.ico" type="image/x-icon">
+    <meta name="copyright" content="© 2025 Cycle Culture">
+    <meta property="og:title" content="A Complete Guide to Cycling in India | Cycle Culture Spotlight">
+    <meta property="og:description" content="Comprehensive guide to cycling in India covering routes, seasons, bike types, and essential tips for cyclists of all levels">
+    <meta name="twitter:card" content="summary_large_image">
 
     <!-- Preload & Preconnect -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -25,22 +28,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Glacial+Indifference:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/blog.css">
     <meta name="theme-color" content="#00a859">
-
-    <!-- Social Meta -->
-    <meta property="og:title" content="A Complete Guide to Cycling in India | Cycle Culture Spotlight">
-    <meta property="og:description" content="Comprehensive guide to cycling in India covering routes, seasons, bike types, and essential tips">
-    <meta property="og:type" content="article">
-    <meta property="og:url" content="https://cycleculture.in/spotlight/a-complete-guide-to-cycling-in-India.html">
-    <meta property="og:image" content="https://cycleculture.in/images/a-complete-guide-to-cycling-in-India-social.jpg">
-    <meta property="og:site_name" content="Cycle Culture">
-    <meta property="article:published_time" content="2025-02-10">
-    <meta property="article:author" content="Cycle Culture">
-    <meta property="article:section" content="Cycling Guide">
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="A Complete Guide to Cycling in India | Cycle Culture Spotlight">
-    <meta name="twitter:description" content="Comprehensive guide to cycling in India covering routes, seasons, bike types, and essential tips">
-    <meta name="twitter:image" content="https://cycleculture.in/images/a-complete-guide-to-cycling-in-India-social.jpg">
-    <meta name="twitter:site" content="@itscycleculture">
 
     <!-- Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-56YGC2V2YG"></script>
@@ -81,7 +68,7 @@
       },
       "image": {
         "@type": "ImageObject",
-        "url": "https://cycleculture.in/images/a-complete-guide-to-cycling-in-India-social.jpg",
+        "url": "https://cycleculture.in/images/a-complete-guide-to-cycling-in-India.jpg",
         "width": "1200",
         "height": "630"
       },
