--- a/spotlight/best-seasons-cycling-india.html
+++ b/spotlight/best-seasons-cycling-india.html
@@ -3,13 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Best Seasons and Weather for Cycling in India | Cycle Culture</title>
     <meta name="description" content="Discover the best seasons and weather conditions for cycling in India, region by region, for an unforgettable riding experience.">
     <meta name="robots" content="index, follow">
     <link rel="canonical" href="https://cycleculture.in/spotlight/best-seasons-cycling-india.html" />
     <link rel="icon" href="../images/favicon.ico" type="icon">
     <link rel="shortcut icon" href="../images/favicon.ico" type="image/x-icon">
+    <meta name="copyright" content="© 2025 Cycle Culture">
+    <meta property="og:title" content="Best Seasons and Weather for Cycling in India | Cycle Culture">
+    <meta property="og:description" content="Discover the best seasons and weather conditions for cycling in India, region by region, for an unforgettable riding experience.">
+    <meta name="twitter:card" content="summary_large_image">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -23,19 +26,7 @@
     <link rel="stylesheet" href="../css/blog.css">
     <meta name="theme-color" content="#00a859">
 
-    <meta property="og:title" content="Best Seasons and Weather for Cycling in India | Cycle Culture">
-    <meta property="og:description" content="Discover the best seasons and weather conditions for cycling in India, region by region, for an unforgettable riding experience.">
-    <meta property="og:type" content="article">
-    <meta property="og:url" content="https://cycleculture.in/spotlight/best-seasons-cycling-india.html">
-    <meta property="og:image" content="https://cycleculture.in/images/spotlight/cycling-india-seasons-social.jpg"> <meta property="og:site_name" content="Cycle Culture">
-    <meta property="article:published_time" content="2025-05-24">
-    <meta property="article:author" content="Cycle Culture">
-    <meta property="article:section" content="Adventure Cycling">
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Best Seasons and Weather for Cycling in India">
-    <meta name="twitter:description" content="Discover the best seasons and weather conditions for cycling in India, region by region, for an unforgettable riding experience.">
-    <meta name="twitter:image" content="https://cycleculture.in/images/spotlight/cycling-india-seasons-social.jpg"> <meta name="twitter:site" content="@itscycleculture">
-
+   
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-56YGC2V2YG"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
@@ -73,7 +64,7 @@
       },
       "image": {
         "@type": "ImageObject",
-        "url": "https://cycleculture.in/images/spotlight/cycling-india-seasons-social.jpg",
+        "url": "https://cycleculture.in/images/spotlight/cycling-india-seasons.jpg",
         "width": "1200",
         "height": "630"
       },
