--- a/spotlight/dedicated-cycling-lanes-india.html
+++ b/spotlight/dedicated-cycling-lanes-india.html
@@ -11,6 +11,10 @@
     <link rel="canonical" href="https://cycleculture.in/spotlight/dedicated-cycling-lanes-india.html" />
     <link rel="icon" href="../images/favicon.ico" type="icon">
     <link rel="shortcut icon" href="../images/favicon.ico" type="image/x-icon">
+    <meta name="copyright" content="© 2025 Cycle Culture">
+    <meta property="og:title" content="How Dedicated Cycling Lanes Could Change the Game in India | Cycle Culture">
+    <meta property="og:description" content="Exploring how dedicated cycling infrastructure could transform urban mobility, safety and sustainability in Indian cities">
+    <meta name="twitter:card" content="summary_large_image">
 
     <!-- Preload & Preconnect -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -25,22 +29,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Glacial+Indifference:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/blog.css">
     <meta name="theme-color" content="#00a859">
-
-    <!-- Social Meta -->
-    <meta property="og:title" content="How Dedicated Cycling Lanes Could Change the Game in India | Cycle Culture">
-    <meta property="og:description" content="How cycling infrastructure could transform urban mobility and safety in Indian cities">
-    <meta property="og:type" content="article">
-    <meta property="og:url" content="https://cycleculture.in/spotlight/dedicated-cycling-lanes-india.html">
-    <meta property="og:image" content="https://cycleculture.in/images/cycling-lanes-india-social.jpg">
-    <meta property="og:site_name" content="Cycle Culture">
-    <meta property="article:published_time" content="2024-11-29">
-    <meta property="article:author" content="Cycle Culture">
-    <meta property="article:section" content="Urban Mobility">
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="How Dedicated Cycling Lanes Could Change the Game in India">
-    <meta name="twitter:description" content="How cycling infrastructure could transform urban mobility in India">
-    <meta name="twitter:image" content="https://cycleculture.in/images/cycling-lanes-india-social.jpg">
-    <meta name="twitter:site" content="@itscycleculture">
 
     <!-- Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-56YGC2V2YG"></script>
@@ -81,7 +69,7 @@
       },
       "image": {
         "@type": "ImageObject",
-        "url": "https://cycleculture.in/images/cycling-lanes-india-social.jpg",
+        "url": "https://cycleculture.in/images/cycling-lanes-india.jpg",
         "width": "1200",
         "height": "630"
       },
