--- a/spotlight/how-to-make-10km-cycling-your-daily-habit-without-spending-a-fortune.html
+++ b/spotlight/how-to-make-10km-cycling-your-daily-habit-without-spending-a-fortune.html
@@ -4,13 +4,16 @@
     <!-- Basic Meta Tags -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>How to Make 10km Cycling Your Daily Habit Without Spending a Fortune | Cycle Culture</title>
     <meta name="description" content="Learn how to build a daily 10km cycling habit without expensive gear - practical tips for beginners to make cycling sustainable and enjoyable">
     <meta name="robots" content="index, follow">
     <link rel="canonical" href="https://cycleculture.in/spotlight/how-to-make-10km-cycling-your-daily-habit-without-spending-a-fortune.html" />
     <link rel="icon" href="../images/favicon.ico" type="icon">
     <link rel="shortcut icon" href="../images/favicon.ico" type="image/x-icon">
+    <meta name="copyright" content="© 2025 Cycle Culture">
+    <meta property="og:title" content="How to Make 10km Cycling Your Daily Habit Without Spending a Fortune | Cycle Culture">
+    <meta property="og:description" content="Learn how to build a daily 10km cycling habit without expensive gear - practical tips for beginners to make cycling sustainable and enjoyable">
+    <meta name="twitter:card" content="summary_large_image">
 
     <!-- Preload & Preconnect -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -26,22 +29,7 @@
     <link rel="stylesheet" href="../css/blog.css">
     <meta name="theme-color" content="#00a859">
 
-    <!-- Social Meta -->
-    <meta property="og:title" content="How to Make 10km Cycling Your Daily Habit Without Spending a Fortune | Cycle Culture">
-    <meta property="og:description" content="Learn how to build a daily 10km cycling habit without expensive gear - practical tips for beginners">
-    <meta property="og:type" content="article">
-    <meta property="og:url" content="https://cycleculture.in/spotlight/how-to-make-10km-cycling-your-daily-habit-without-spending-a-fortune.html">
-    <meta property="og:image" content="https://cycleculture.in/images/10km-cycling-every-day-social.jpg">
-    <meta property="og:site_name" content="Cycle Culture">
-    <meta property="article:published_time" content="2025-04-13">
-    <meta property="article:author" content="Cycle Culture">
-    <meta property="article:section" content="Habit Building">
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="How to Make 10km Cycling Your Daily Habit Without Spending a Fortune">
-    <meta name="twitter:description" content="Learn how to build a daily 10km cycling habit without expensive gear">
-    <meta name="twitter:image" content="https://cycleculture.in/images/10km-cycling-every-day-social.jpg">
-    <meta name="twitter:site" content="@itscycleculture">
-
+   
     <!-- Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-56YGC2V2YG"></script>
     <script>
@@ -81,7 +69,7 @@
       },
       "image": {
         "@type": "ImageObject",
-        "url": "https://cycleculture.in/images/10km-cycling-every-day-social.jpg",
+        "url": "https://cycleculture.in/images/10km-cycling-every-day.jpg",
         "width": "1200",
         "height": "630"
       },
