--- a/spotlight/is-10km-cycling-every-day-the-golden-distance.html
+++ b/spotlight/is-10km-cycling-every-day-the-golden-distance.html
@@ -4,13 +4,16 @@
     <!-- Basic Meta Tags -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Is 10km Cycling Every Day the Golden Distance? | Cycle Culture</title>
     <meta name="description" content="Emerging research suggests 10km daily cycling hits the sweet spot for sustainable health benefits, mental clarity, and environmental impact">
     <meta name="robots" content="index, follow">
     <link rel="canonical" href="https://cycleculture.in/spotlight/is-10km-cycling-every-day-the-golden-distance.html" />
     <link rel="icon" href="../images/favicon.ico" type="icon">
     <link rel="shortcut icon" href="../images/favicon.ico" type="image/x-icon">
+    <meta name="copyright" content="© 2025 Cycle Culture">
+    <meta property="og:title" content="Is 10km Cycling Every Day the Golden Distance? | Cycle Culture">
+    <meta property="og:description" content="Emerging research suggests 10km daily cycling hits the sweet spot for sustainable health benefits, mental clarity, and environmental impact">
+    <meta name="twitter:card" content="summary_large_image">
 
     <!-- Preload & Preconnect -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -25,22 +28,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Glacial+Indifference:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/blog.css">
     <meta name="theme-color" content="#00a859">
-
-    <!-- Social Meta -->
-    <meta property="og:title" content="Is 10km Cycling Every Day the Golden Distance? | Cycle Culture">
-    <meta property="og:description" content="Discover why 10km daily cycling hits the sweet spot for health benefits, mental clarity and environmental impact">
-    <meta property="og:type" content="article">
-    <meta property="og:url" content="https://cycleculture.in/spotlight/is-10km-cycling-every-day-the-golden-distance.html">
-    <meta property="og:image" content="https://cycleculture.in/images/10km-cycling-social.jpg">
-    <meta property="og:site_name" content="Cycle Culture">
-    <meta property="article:published_time" content="2024-09-08">
-    <meta property="article:author" content="Cycle Culture">
-    <meta property="article:section" content="Health & Fitness">
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Is 10km Cycling Every Day the Golden Distance?">
-    <meta name="twitter:description" content="Discover why 10km daily cycling hits the sweet spot for health benefits">
-    <meta name="twitter:image" content="https://cycleculture.in/images/10km-cycling-social.jpg">
-    <meta name="twitter:site" content="@itscycleculture">
 
     <!-- Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-56YGC2V2YG"></script>
@@ -81,7 +68,7 @@
       },
       "image": {
         "@type": "ImageObject",
-        "url": "https://cycleculture.in/images/10km-cycling-social.jpg",
+        "url": "https://cycleculture.in/images/10km-cycling.jpg",
         "width": "1200",
         "height": "630"
       },
