--- a/spotlight/mumbai's-midnight-cycling-revolution.html
+++ b/spotlight/mumbai's-midnight-cycling-revolution.html
@@ -4,13 +4,16 @@
     <!-- Basic Meta Tags -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Mumbai's Midnight Cycling Revolution | Cycle Culture Spotlight</title>
+    <title>Mumbai's Midnight Cycling Revolution | Cycle Culture</title>
     <meta name="description" content="Discover how midnight cycling tours have transformed Mumbai's nightscape into a sustainable urban adventure, connecting people while reducing environmental impact">
     <meta name="robots" content="index, follow">
     <link rel="canonical" href="https://cycleculture.in/spotlight/mumbai-midnight-cycling-revolution.html" />
     <link rel="icon" href="../images/favicon.ico" type="icon">
     <link rel="shortcut icon" href="../images/favicon.ico" type="image/x-icon">
+    <meta name="copyright" content="© 2025 Cycle Culture">
+    <meta property="og:title" content="Mumbai's Midnight Cycling Revolution | Cycle Culture">
+    <meta property="og:description" content="Discover how midnight cycling tours have transformed Mumbai's nightscape into a sustainable urban adventure, connecting people while reducing environmental impact">
+    <meta name="twitter:card" content="summary_large_image">
 
     <!-- Preload & Preconnect -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -26,21 +29,7 @@
     <link rel="stylesheet" href="../css/blog.css">
     <meta name="theme-color" content="#00a859">
 
-    <!-- Social Meta -->
-    <meta property="og:title" content="Mumbai's Midnight Cycling Revolution | Cycle Culture Spotlight">
-    <meta property="og:description" content="Discover how midnight cycling tours have transformed Mumbai's nightscape into a sustainable urban adventure">
-    <meta property="og:type" content="article">
-    <meta property="og:url" content="https://cycleculture.in/spotlight/mumbai-midnight-cycling-revolution.html">
-    <meta property="og:image" content="https://cycleculture.in/images/mumbai-night-cycling-social.jpg">
-    <meta property="og:site_name" content="Cycle Culture">
-    <meta property="article:published_time" content="2025-04-21">
-    <meta property="article:author" content="Cycle Culture">
-    <meta property="article:section" content="Urban Cycling">
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Mumbai's Midnight Cycling Revolution | Cycle Culture Spotlight">
-    <meta name="twitter:description" content="Discover how midnight cycling tours have transformed Mumbai's nightscape">
-    <meta name="twitter:image" content="https://cycleculture.in/images/mumbai-night-cycling-social.jpg">
-    <meta name="twitter:site" content="@itscycleculture">
+    
 
     <!-- Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-56YGC2V2YG"></script>
@@ -81,7 +70,7 @@
       },
       "image": {
         "@type": "ImageObject",
-        "url": "https://cycleculture.in/images/mumbai-night-cycling-social.jpg",
+        "url": "https://cycleculture.in/images/mumbai-night-cycling.jpg",
         "width": "1200",
         "height": "630"
       },
