--- a/spotlight/national-cycling-policy-india.html
+++ b/spotlight/national-cycling-policy-india.html
@@ -4,13 +4,16 @@
     <!-- Basic Meta Tags -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>The Need for a National Cycling Policy in India: A Wake-Up Call | Cycle Culture</title>
     <meta name="description" content="Why India urgently needs a National Cycling Policy to address traffic congestion, pollution, and public health concerns">
     <meta name="robots" content="index, follow">
     <link rel="canonical" href="https://cycleculture.in/spotlight/national-cycling-policy-india.html" />
     <link rel="icon" href="../images/favicon.ico" type="icon">
     <link rel="shortcut icon" href="../images/favicon.ico" type="image/x-icon">
+    <meta name="copyright" content="© 2025 Cycle Culture">
+    <meta property="og:title" content="The Need for a National Cycling Policy in India: A Wake-Up Call | Cycle Culture">
+    <meta property="og:description" content="Why India urgently needs a National Cycling Policy to address traffic congestion, pollution, and public health concerns">
+    <meta name="twitter:card" content="summary_large_image">
 
     <!-- Preload & Preconnect -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -25,22 +28,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Glacial+Indifference:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/blog.css">
     <meta name="theme-color" content="#00a859">
-
-    <!-- Social Meta -->
-    <meta property="og:title" content="The Need for a National Cycling Policy in India: A Wake-Up Call | Cycle Culture">
-    <meta property="og:description" content="Why India urgently needs a National Cycling Policy to address traffic, pollution and health concerns">
-    <meta property="og:type" content="article">
-    <meta property="og:url" content="https://cycleculture.in/spotlight/national-cycling-policy-india.html">
-    <meta property="og:image" content="https://cycleculture.in/images/cycling-policy-india-social.jpg">
-    <meta property="og:site_name" content="Cycle Culture">
-    <meta property="article:published_time" content="2024-12-26">
-    <meta property="article:author" content="Cycle Culture">
-    <meta property="article:section" content="Policy & Advocacy">
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="The Need for a National Cycling Policy in India: A Wake-Up Call">
-    <meta name="twitter:description" content="Why India urgently needs a National Cycling Policy">
-    <meta name="twitter:image" content="https://cycleculture.in/images/cycling-policy-india-social.jpg">
-    <meta name="twitter:site" content="@itscycleculture">
 
     <!-- Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-56YGC2V2YG"></script>
@@ -81,7 +68,7 @@
       },
       "image": {
         "@type": "ImageObject",
-        "url": "https://cycleculture.in/images/cycling-policy-india-social.jpg",
+        "url": "https://cycleculture.in/images/cycling-policy-india.jpg",
         "width": "1200",
         "height": "630"
       },
