--- a/spotlight/screen-time-cycling-solution.html
+++ b/spotlight/screen-time-cycling-solution.html
@@ -11,6 +11,10 @@
     <link rel="canonical" href="https://cycleculture.in/spotlight/indias-screen-problem-can-cycling-help.html" />
     <link rel="icon" href="../images/favicon.ico" type="icon">
     <link rel="shortcut icon" href="../images/favicon.ico" type="image/x-icon">
+    <meta name="copyright" content="© 2025 Cycle Culture">
+    <meta property="og:title" content="India's 7.3 Hour Screen Problem: Can Cycling Be the Answer? | Cycle Culture">
+    <meta property="og:description" content="Exploring India's screen addiction problem and how cycling can help balance digital consumption with physical activity and real-world connections">
+    <meta name="twitter:card" content="summary_large_image">
 
     <!-- Preload & Preconnect -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -25,22 +29,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Glacial+Indifference:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/blog.css">
     <meta name="theme-color" content="#00a859">
-
-    <!-- Social Meta -->
-    <meta property="og:title" content="India's 7.3 Hour Screen Problem: Can Cycling Be the Answer? | Cycle Culture">
-    <meta property="og:description" content="Exploring India's screen addiction problem and how cycling can help balance digital consumption">
-    <meta property="og:type" content="article">
-    <meta property="og:url" content="https://cycleculture.in/spotlight/indias-screen-problem-can-cycling-help.html">
-    <meta property="og:image" content="https://cycleculture.in/images/screen-time-cycling-solution.jpg">
-    <meta property="og:site_name" content="Cycle Culture">
-    <meta property="article:published_time" content="2025-03-19">
-    <meta property="article:author" content="Cycle Culture">
-    <meta property="article:section" content="Health & Wellness">
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="India's 7.3 Hour Screen Problem: Can Cycling Be the Answer?">
-    <meta name="twitter:description" content="Exploring India's screen addiction problem and how cycling can help">
-    <meta name="twitter:image" content="https://cycleculture.in/images/screen-time-cycling-solution.jpg">
-    <meta name="twitter:site" content="@itscycleculture">
 
     <!-- Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-56YGC2V2YG"></script>
