--- a/spotlight/why-cycle-with-PM-could-be-more-impactful-than-mann-ki-baat.html
+++ b/spotlight/why-cycle-with-PM-could-be-more-impactful-than-mann-ki-baat.html
@@ -4,13 +4,16 @@
     <!-- Basic Meta Tags -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Why 'Cycle with PM' Could Be More Impactful Than 'Mann Ki Baat' | Cycle Culture</title>
     <meta name="description" content="How a national cycling initiative led by the Prime Minister could create more tangible impact than radio addresses by promoting health, sustainability and public engagement">
     <meta name="robots" content="index, follow">
     <link rel="canonical" href="https://cycleculture.in/spotlight/why-cycle-with-PM-could-be-more-impactful-than-mann-ki-baat.html" />
     <link rel="icon" href="../images/favicon.ico" type="icon">
     <link rel="shortcut icon" href="../images/favicon.ico" type="image/x-icon">
+    <meta name="copyright" content="© 2025 Cycle Culture">
+    <meta property="og:title" content="Why 'Cycle with PM' Could Be More Impactful Than 'Mann Ki Baat' | Cycle Culture">
+    <meta property="og:description" content="How a national cycling initiative led by the Prime Minister could create more tangible impact than radio addresses by promoting health, sustainability and public engagement">
+    <meta name="twitter:card" content="summary_large_image">
 
     <!-- Preload & Preconnect -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -81,7 +84,7 @@
       },
       "image": {
         "@type": "ImageObject",
-        "url": "https://cycleculture.in/images/maan-ki-baat-social.jpg",
+        "url": "https://cycleculture.in/images/maan-ki-baat.jpg",
         "width": "1200",
         "height": "630"
       },
