--- a/spotlight.html
+++ b/spotlight.html
@@ -159,6 +159,11 @@
                 <p>India's urban roads are becoming increasingly unsafe for cyclists. Dedicated cycling lanes could transform urban mobility, making cities safer and more sustainable.</p>
                 <a href="spotlight/dedicated-cycling-lanes-india.html" class="read-more">continue reading →</a>
             </div>
+
+             <div class="spotlight-item">
+                <p>Discover the best seasons and weather conditions for cycling in India, region by region, for an unforgettable riding experience.</p>
+                <a href="spotlight/spotlight/best-seasons-cycling-india.html" class="read-more">continue reading →</a>
+            </div>
             
             <div class="newsletter-cta">
                 <div class="newsletter-form-container">
