--- a/spotlight.html
+++ b/spotlight.html
@@ -26,18 +26,6 @@
     <link rel="stylesheet" href="css/spotlight.css">
     <meta name="theme-color" content="#00a859">
 
-    <!-- Social Meta -->
-    <meta property="og:title" content="Cycle Culture Spotlight | Stories of India's Cycling Culture">
-    <meta property="og:description" content="Discover inspiring stories and insights about India's growing cycling community">
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://cycleculture.in/spotlight.html">
-    <meta property="og:image" content="https://cycleculture.in/images/spotlight-social-preview.jpg">
-    <meta property="og:site_name" content="Cycle Culture">
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Cycle Culture Spotlight | Stories of India's Cycling Culture">
-    <meta name="twitter:description" content="Discover inspiring stories about India's growing cycling community">
-    <meta name="twitter:image" content="https://cycleculture.in/images/spotlight-social-preview.jpg">
-    <meta name="twitter:site" content="@itscycleculture">
 
     <!-- Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-56YGC2V2YG"></script>
@@ -164,6 +152,14 @@
                 <p>Discover the best seasons and weather conditions for cycling in India, region by region, for an unforgettable riding experience.</p>
                 <a href="spotlight/spotlight/best-seasons-cycling-india.html" class="read-more">continue reading →</a>
             </div>
+
+               <div class="spotlight-item">
+                <p>The Bharat Mobility Expo 2025 showcased India's electric future, with electric cycles taking center stage. We explore the innovations, challenges, and opportunities for e-cycles in the Indian market.</p>
+                <a href="spotlight/spotlight/spotlight/bharat-mobility-expo-2025.html" class="read-more">continue reading →</a>
+            </div>
+
+
+            
             
             <div class="newsletter-cta">
                 <div class="newsletter-form-container">
