--- a/spotlight.html
+++ b/spotlight.html
@@ -158,6 +158,15 @@
                 <a href="spotlight/spotlight/spotlight/bharat-mobility-expo-2025.html" class="read-more">continue reading →</a>
             </div>
 
+             <div class="spotlight-item">
+                <p>As the world races to meet climate targets, cycling emerges as a powerful yet often overlooked solution. Discover how two wheels could help steer us toward a sustainable future.</p>
+                <a href="spotlight/spotlight/spotlight/cycling-climate-goals.html" class="read-more">continue reading →</a>
+            </div>
+
+            <div class="spotlight-item">
+                <p>In recent years, cycling culture in India has experienced a significant resurgence, transcending mere transportation to embody a lifestyle choice embraced by urban dwellers and enthusiasts alike.</p>
+                <a href="spotlight/spotlight/spotlight/cycle-culture-india.html" class="read-more">continue reading →</a>
+            </div>
 
             
             
