--- a/spotlight/cycle-culture-india.html
+++ b/spotlight/cycle-culture-india.html
@@ -104,7 +104,7 @@
                 <span class="blog-date">August 21, 2024</span>
                 <span class="blog-category">Culture</span>
             </div>
-            <h1 class="blog-title">Cycle Culture in India<br>From Inception to Present Day</h1>
+            <h1 class="blog-title">Cycle Culture in India - from inception to present day</h1>
         </div>
     </section>
 
