--- a/spotlight/bharat-mobility-expo-2025.html
+++ b/spotlight/bharat-mobility-expo-2025.html
@@ -105,7 +105,7 @@
                 <span class="blog-date">January 23, 2025</span>
                 <span class="blog-category">Electric Mobility</span>
             </div>
-            <h1 class="blog-title">Bharat Mobility Expo 2025:<br>Riding Into India's Electric Future</h1>
+            <h1 class="blog-title">Bharat Mobility Expo 2025:Riding into India's electric future</h1>
         </div>
     </section>
 
