--- a/spotlight.html
+++ b/spotlight.html
@@ -168,6 +168,12 @@
                 <a href="spotlight/cycle-culture-india.html" class="read-more">continue reading →</a>
             </div>
 
+
+            <div class="spotlight-item">
+                <p>Cycling is one of the most efficient, eco-friendly, and enjoyable ways to commute, stay fit, and explore new places. With a wide range of cycles available, choosing the right one depends on factors such as terrain, distance, and purpose.</p>
+                <a href="spotlight/choosing-right-cycle.html" class="read-more">continue reading →</a>
+            </div>
+
             
             
             <div class="newsletter-cta">
