--- a/spotlight/national-cycling-policy-india.html
+++ b/spotlight/national-cycling-policy-india.html
@@ -104,7 +104,7 @@
                 <span class="blog-date">December 26, 2024</span>
                 <span class="blog-category">Policy & Advocacy</span>
             </div>
-            <h1 class="blog-title">The Need for a National Cycling Policy in India:<br>A Wake-Up Call</h1>
+            <h1 class="blog-title">The need for a National Cycling Policy in India: A wake-up call</h1>
         </div>
     </section>
 
