--- a/spotlight/cycle-culture-india.html
+++ b/spotlight/cycle-culture-india.html
@@ -112,7 +112,7 @@
     <section id="blog-content" class="fullscreen-section" style="background-image: url('../images/spotlight/cycling-india-evolution.jpg')">
         <div class="section-content">
             <div class="blog-excerpt">
-                <p>In recent years, cycling culture in India has experienced a significant resurgence, transcending mere transportation to embody a lifestyle choice embraced by urban dwellers and enthusiasts alike.</p>
+                <p>In recent years, cycling culture in India has experienced a significant resurgence, transcending mere transportation to embody a lifestyle choice embraced by urbanites and enthusiasts alike.</p>
             </div>
 
             <article class="blog-article">
