--- a/spotlight.html
+++ b/spotlight.html
@@ -164,7 +164,7 @@
             </div>
 
             <div class="spotlight-item">
-                <p>In recent years, cycling culture in India has experienced a significant resurgence, transcending mere transportation to embody a lifestyle choice embraced by urban dwellers and enthusiasts alike.</p>
+                <p>In recent years, cycling culture in India has experienced a significant resurgence, transcending mere transportation to embody a lifestyle choice embraced by urbanites and enthusiasts alike.</p>
                 <a href="spotlight/cycle-culture-india.html" class="read-more">continue reading →</a>
             </div>
 
@@ -172,6 +172,11 @@
             <div class="spotlight-item">
                 <p>Cycling is one of the most efficient, eco-friendly, and enjoyable ways to commute, stay fit, and explore new places. With a wide range of cycles available, choosing the right one depends on factors such as terrain, distance, and purpose.</p>
                 <a href="spotlight/choosing-right-cycle.html" class="read-more">continue reading →</a>
+            </div>
+
+              <div class="spotlight-item">
+                <p>Delhi's pollution crisis is no longer just a statistic - it's a daily reality that its residents experience firsthand. While the visible effects are immediately noticeable, the invisible long-term consequences are often overlooked.</p>
+                <a href="spotlight/delhi-smog-cycling.html" class="read-more">continue reading →</a>
             </div>
 
             
