--- a/spotlight.html
+++ b/spotlight.html
@@ -179,6 +179,11 @@
                 <a href="spotlight/delhi-smog-cycling.html" class="read-more">continue reading →</a>
             </div>
 
+             <div class="spotlight-item">
+                <p>Forget the spin classes and crowded gyms. There's something wonderfully liberating about throwing your leg over a cycle and just going. No fancy equipment, no subscriptions, just you, two wheels, and the open road.</p>
+                <a href="spotlight/women-cycling-benefits.html" class="read-more">continue reading →</a>
+            </div>
+
             
             
             <div class="newsletter-cta">
