--- a/spotlight.html
+++ b/spotlight.html
@@ -184,6 +184,11 @@
                 <a href="spotlight/women-cycling-benefits.html" class="read-more">continue reading →</a>
             </div>
 
+             <div class="spotlight-item">
+                <p>Imagine a scenario where the Prime Minister of India incorporates a weekly 10-kilometer cycling routine into his schedule. Such a move could have profound implications for the nation, influencing public behavior, health, infrastructure, and environmental consciousness.</p>
+                <a href="spotlight/pm-cycling-impact.html" class="read-more">continue reading →</a>
+            </div>
+
             
             
             <div class="newsletter-cta">
