--- a/spotlight/pm-cycling-impact.html
+++ b/spotlight/pm-cycling-impact.html
@@ -104,7 +104,7 @@
                 <span class="blog-date">February 27, 2025</span>
                 <span class="blog-category">Policy & Impact</span>
             </div>
-            <h1 class="blog-title">What Happens If the Prime Minister<br>of India Starts Cycling?</h1>
+            <h1 class="blog-title">What happens if the Prime Minister of India starts cycling?</h1>
         </div>
     </section>
 
