--- a/spotlight.html
+++ b/spotlight.html
@@ -189,6 +189,11 @@
                 <a href="spotlight/pm-cycling-impact.html" class="read-more">continue reading →</a>
             </div>
 
+              <div class="spotlight-item">
+                <p>In recent years, weekend cycling in India has surged in popularity, becoming more than just a casual activity. It's now a lifestyle for those looking to balance busy lives with meaningful outdoor experiences.</p>
+                <a href="spotlight/weekend-cycling-india.html" class="read-more">continue reading →</a>
+            </div>
+
             
             
             <div class="newsletter-cta">
