--- a/spotlight/weekend-cycling-india.html
+++ b/spotlight/weekend-cycling-india.html
@@ -104,7 +104,7 @@
                 <span class="blog-date">October 27, 2024</span>
                 <span class="blog-category">Lifestyle</span>
             </div>
-            <h1 class="blog-title">The Rise of Weekend Cycling in India:<br>More Than Just a Trend</h1>
+            <h1 class="blog-title">The rise of weekend cycling in India: More than just a trend</h1>
         </div>
     </section>
 
@@ -184,10 +184,7 @@
                 <h2>Conclusion</h2>
                 <p>Weekend cycling in India is more than a trend—it's a lifestyle bringing excitement, nature connection, and community. People across the country are embracing cycling as a way to make weekends memorable and fulfilling. So why not make this weekend the start of your own cycling journey? Grab a cycle, hit the road, and experience the rewards of weekend cycling with friends and nature alike.</p>
                 
-                <div class="call-to-action">
-                    <p>Ready to join the weekend cycling movement? Find cycling groups and events near you to get started.</p>
-                    <button class="cta-button">Find Local Groups</button>
-                </div>
+                
             </article>
 
             <div class="blog-navigation">
