--- a/spotlight.html
+++ b/spotlight.html
@@ -194,6 +194,11 @@
                 <a href="spotlight/weekend-cycling-india.html" class="read-more">continue reading →</a>
             </div>
 
+            <div class="spotlight-item">
+                <p>Cycling culture in India has started to gain traction as an eco-friendly transport option, yet cycling to work remains stigmatized, reflecting deep-rooted societal perceptions tied to vehicle ownership and social status.</p>
+                <a href="spotlight/cycling-to-work-india.html" class="read-more">continue reading →</a>
+            </div>
+
             
             
             <div class="newsletter-cta">
