--- a/spotlight/is-10km-cycling-every-day-the-golden-distance.html
+++ b/spotlight/is-10km-cycling-every-day-the-golden-distance.html
@@ -68,7 +68,7 @@
       },
       "image": {
         "@type": "ImageObject",
-        "url": "https://cycleculture.in/images/10km-cycling.jpg",
+        "url": "https://cycleculture.in/images/spotlight/10km-cycling.jpg",
         "width": "1200",
         "height": "630"
       },
