--- a/spotlight/why-cycle-with-PM-could-be-more-impactful-than-mann-ki-baat.html
+++ b/spotlight/why-cycle-with-PM-could-be-more-impactful-than-mann-ki-baat.html
@@ -84,7 +84,7 @@
       },
       "image": {
         "@type": "ImageObject",
-        "url": "https://cycleculture.in/images/maan-ki-baat.jpg",
+        "url": "https://cycleculture.in/images/spotlight/maan-ki-baat.jpg",
         "width": "1200",
         "height": "630"
       },
