--- a/spotlight/women-cycling-benefits.html
+++ b/spotlight/women-cycling-benefits.html
@@ -104,7 +104,7 @@
                 <span class="blog-date">March 27, 2025</span>
                 <span class="blog-category">Health & Wellness</span>
             </div>
-            <h1 class="blog-title">Why Every Woman<br>Should Grab a Cycle</h1>
+            <h1 class="blog-title">Why every woman should grab a cycle</h1>
         </div>
     </section>
 
