--- a/contact.html
+++ b/contact.html
@@ -130,6 +130,6 @@
         </div>
     </section>
 
-    <script src="js/contact"></script>
+    <script src="js/contact.js"></script>
 </body>
 </html>
